[tool.poetry]
name = "blockchain-shooting-101"
version = "0.1.0"
description = ""
authors = ["3lLobo <flocwolf@gmail.com>"]
readme = "README.md"
packages = [{include = "blockchain_shooting_101"}]

[tool.poetry.dependencies]
python = "^3.10"
web3 = "^6.0.0"
py-solc-x = "^1.1.1"
black = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
