[tool.poetry]
name = "ml-reconfiguration"
version = "11"
description = ""
authors = ["3lLobo <flocwolf@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_reconfiguration"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
